:bug: Fix page overflow

--- a/public/css/components/templates.css
+++ b/public/css/components/templates.css
@@ -2,6 +2,7 @@
 .page {
     display: flex;
     height: 100vh;
+    overflow: hidden;
 }
 .page-content {
     width: 100%;
